--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,7 +1,7 @@
 %footer.footer
   .container
     .row
-      .span6
+      .span4
         %p.copyright
           &copy; Neighbours Can Help Ltd 
         %ul.unstyled.footer-links
@@ -11,6 +11,11 @@
               Help
           =li_with_active(@page && (@page.slug == "safety_tips" || @page.descendant_of_slug("safety_tips")), link_to_slug(:safety_tips, :class=>""))
           =li_with_active(current_page?(feedback_path), link_to("Contact us", feedback_path, :class => ""))
-      .span6      
+      .span8      
         =link_to "Nominet trust", "http://www.nominettrust.org.uk/", :Target=>"_blank", :class=>"nominet-logo footer-logo"
         =link_to "Yoomee", "http://www.yoomee.com/", :Target=>"_blank", :class=>"yoomee-logo footer-logo"
+        %ul.unstyled.find-us-on
+          %li.find-title Find us on
+          %li=link_to "Facebook", "https://www.facebook.com/NeighboursCanHelp", :class=>"link-find-us link-find-us-facebook", :target=>"blank", :'data-toggle'=>"tooltip", :title=>"Like us!" 
+          %li=link_to "Blogger", "http://neighbourscanhelp2.blogspot.co.uk/2013/04/spare-bedroom-tax-does-it-affect-you.html?zx=1bb615ef8bf75e2e", :class=>"link-find-us link-find-us-blogger", :target=>"blank", :'data-toggle'=>"tooltip", :title=>"Follow us" 
+          %li=link_to "Google +", "https://plus.google.com/u/0/110653171808475579893/posts", :class=>"link-find-us link-find-us-google", :target=>"blank", :'data-toggle'=>"tooltip", :title=>"Follow for updates, news and more"
