--- a/app/views/general_offers/index.js.erb
+++ b/app/views/general_offers/index.js.erb
@@ -1,6 +1,6 @@
 var offersHtml = '';
 <%if @general_offers.empty?%>
-  offersHtml = '<li><p>Looks like no-one is offering help in this category at the moment. Explain what you would like help with using the form on the right.</p></li>';
+  offersHtml = '<li><p class="no-needs-offers">Looks like no-one is offering help in this category at the moment. Explain what you would like help with using the form on the right.</p></li>';
 <%else%>
   <%@general_offers.each do |general_offer|%>
     offersHtml = offersHtml + '<%=escape_javascript(render("general_offers/list_item", :general_offer => general_offer))%>';
