--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -16,6 +16,6 @@
         =link_to "Yoomee", "http://www.yoomee.com/", :Target=>"_blank", :class=>"yoomee-logo footer-logo"
         %ul.unstyled.find-us-on
           %li.find-title Find us on
-          %li=link_to "Facebook", "https://www.facebook.com/NeighboursCanHelp", :class=>"link-find-us link-find-us-facebook", :target=>"blank", :'data-toggle'=>"tooltip", :title=>"Like us!" 
-          %li=link_to "Blogger", "http://neighbourscanhelp2.blogspot.co.uk/2013/04/spare-bedroom-tax-does-it-affect-you.html?zx=1bb615ef8bf75e2e", :class=>"link-find-us link-find-us-blogger", :target=>"blank", :'data-toggle'=>"tooltip", :title=>"Follow us" 
-          %li=link_to "Google +", "https://plus.google.com/u/0/110653171808475579893/posts", :class=>"link-find-us link-find-us-google", :target=>"blank", :'data-toggle'=>"tooltip", :title=>"Follow for updates, news and more"
+          %li=link_to "Facebook", "https://www.facebook.com/NeighboursCanHelp", :class=>"link-find-us link-find-us-facebook", :target=>"_blank", :title=>"Like us!"
+          %li=link_to "Blogger", "http://neighbourscanhelp2.blogspot.co.uk/2013/04/spare-bedroom-tax-does-it-affect-you.html?zx=1bb615ef8bf75e2e", :class=>"link-find-us link-find-us-blogger", :target=>"_blank", :title=>"Follow us"
+          %li=link_to "Google +", "https://plus.google.com/u/0/110653171808475579893/posts", :class=>"link-find-us link-find-us-google", :target=>"_blank", :title=>"Follow for updates, news and more"
