--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,7 +58,8 @@
      -moz-transition: .2s ease-in;
      transition: .2s ease-in;
 }
-.intro-circle-icon {
+.intro-circle-icon,
+.home-cta-groups  {
      -webkit-transition: .1s ease-in;
      -moz-transition: .1s ease-in;
      transition: .1s ease-in;
@@ -455,6 +456,23 @@ a.home-cta-get-involved {
   top: 280px;
   right: 120px;
   background: #73bca8;
+}
+.home-cta-groups {
+  color: #777;
+  border: 1px solid #ccc;
+  position: absolute;
+  top: 350px;
+  background: #fff;
+  background: rgba(255,255,255,0.7);  
+  padding: 10px 20px;
+  
+  border-radius:40px;
+  right: 150px;
+}
+.home-cta-groups:hover {
+  text-decoration: none;
+  color: #000;
+  background: #fff;
 }
 .illustration-link {
   display: block;
@@ -1311,7 +1329,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   display: block;
   text-align: center;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 18px;
  
 }
 .header-intro li.active a,
@@ -1326,7 +1344,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 
 }
 .intro-nav-link-login {
-	margin:  0 10px 0 33px;
+	margin:  0 10px 0 26px;
 
 }
 .header-intro-fixed .intro-nav-link {
@@ -1395,7 +1413,7 @@ a.intro-nav-link-security {
 }
 .header-intro .cta-intro {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 18px;
 }
 .cta-intro:hover {
   text-decoration: none;
@@ -1709,4 +1727,126 @@ a.small-help-btn {
 }
 #pre-registrations-delete-form .center {
   text-align: center;
+}
+
+/*=============  group stuff ===================*/
+#group-new-modal .new-message-form {
+  margin: 20px 100px;
+}
+#group-new-modal label {
+  font-weight: bold;
+  margin-bottom: 20px;
+  font-size:18px;
+  text-indent: 5px;
+  line-height: 1.2;
+}
+#group-new-modal label span.smallprint {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 30px;
+  float: left;
+  clear: left;
+} 
+.group-bio-textarea {
+	min-height: 100px;  
+}
+
+.all-groups-strip {
+	border-bottom: 2px solid #88d6dc;
+	padding-bottom: 15px;
+	float: left;
+	width: 100%;
+	margin: -20px 0 0;
+  
+}
+
+img.groups-logo-header {
+	float: left;
+	width: 50px;
+	margin: 0 20px 0 0;
+  
+}
+
+.groups-title {
+	line-height: 40px;
+  
+}
+
+.groups-title small {
+  margin-left: 10px;
+  text-decoration: underline;
+}
+.group-nav-tabs a {
+  font-weight: bold;
+}
+
+.group-members-list li.list {
+  width: 33.3%;
+  float: left;
+  clear: none;
+  border: none;
+  padding: 0;
+}
+.private-messages-holding {
+  background: url(/assets/group-show-messages.png ) no-repeat center;
+  height: 300px;
+}
+.groups-tags-list .tag-label {
+	padding: 8px 10px;
+	font-size: 16px;
+	float: left;
+	clear: both;
+	margin: 0 0 5px;
+	background: #89d6dd;
+  
+}
+
+.group-tile {
+  display: block;
+  background: #f5f5f5;
+  margin-bottom: 20px;
+  border: 2px solid #f2f2f2;
+  height: 200px;
+  
+  -moz-border-radius:5px;
+-webkit-border-radius:5px;
+border-radius:5px;
+  
+}
+.group-tile h4 {
+  color: #000;
+}
+.group-tile-image-wrap {
+  height: 120px;
+  position: relative;
+}
+.group-tile img {
+  float: left;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.group-tile .inner {
+  padding: 15px;
+}
+.group-tile-new {
+  background: #fff;
+  color: #8bd7dd;
+  border: 2px dashed #8bd7dd;
+}
+.group-tile-new h4 {
+
+  text-align: center;
+}
+.group-tile-new i {
+  margin:40px 65px;
+  float: left;
+
+  font-size: 60px;
+}
+
+.group-tile-new:hover {
+  background: #d8f2f3;
+  color: #000;
+}
+  
 }
