Edit and destroy groups

--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -18,10 +18,16 @@
         Posts
       =render("posts/remote_form", :post => current_user.posts.build(:target => @group))
       =render("posts/posts", :posts => @posts)
-    .span4.offset1.groups-tags-list
-      %h4.mb-2 Tags
-      %ul.unstyled
-        -Tag.for_post_target(@group).most_used.each do |tag|
-          %li
-            =link_to(tag) do
-              %span.label.tag-label=tag
+    -if (tags = Tag.for_post_target(@group).most_used).length > 1
+      .span4.offset1.groups-tags-list
+        %h4.mb-2 Tags
+        %ul.unstyled
+          -tags.each do |tag|
+            %li
+              =link_to(tag) do
+                %span.label.tag-label=tag
+  .row.mt-2
+    .span12
+      =options_panel do
+        =link_if_can("Edit group", [:edit, @group])
+        =link_if_can("Delete group", [:destroy, @group], :confirm => "Are you sure?")
