--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -1,3 +1,4 @@
+.container
 .all-groups-strip
   .container
     .row
@@ -8,3 +9,15 @@
             Groups
             %small
               View all groups
+-if @group
+  .container
+    .row.mb-2.mt-3
+      .span7
+        %h1.page-title.mb-3.mt-0
+          =@group.name
+        =simple_format(@group.description)
+      .span5
+        =image_for(@group, '370x250#')
+    .row
+      .span12
+        =render('groups/nav')
