--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -1,5 +1,13 @@
 =semantic_form_for(@group) do |form|
   =form.inputs do
+    .control-group.mb-2
+      %label.radio
+        =form.radio_button :private, false
+        %strong Public
+      %label.radio
+        =form.radio_button :private, true
+        %strong Private
+        =" - Only invited members can access"
     =form.input :name, :label => 'Group name', :input_html => {:class => 'span6'}, :required => false
     =form.input :description, :label => 'Group bio', :required => false, :input_html => {:class => 'span6', :rows => 4}
     =form.input :image, :label => 'Photo', :as => :image
