Registering as a group user

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -1,6 +1,6 @@
 =semantic_form_for(@group) do |form|
   =form.inputs do
-    .control-group.mb-2
+    .control-group.mt-3.mb-2
       %label.radio
         =form.radio_button :private, false
         %strong Public
