--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -796,6 +796,9 @@ li.active span.tab-number {
   border-top: none;
   margin-bottom: 20px;
 }
+body.controller_group_registrations .register-tab-content {
+  border: 1px solid #ccc;
+}
 .register-tab-content .form-actions {
 	margin: 0;
 }
