--- a/app/views/groups/about.html.haml
+++ b/app/views/groups/about.html.haml
@@ -13,7 +13,7 @@
       %h3 What are groups?
       %p
         Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui.
-      =link_to(new_group_path, :class => "btn call-to-action", :id => "create-group-cta") do
+      =link_to(current_user ? new_group_path : new_group_registration_path, :class => "btn call-to-action", :id => "create-group-cta") do
         %i.icon-plus
         Create a Group
     .span5
