--- a/app/views/layouts/logged_in/_body.html.haml
+++ b/app/views/layouts/logged_in/_body.html.haml
@@ -13,3 +13,4 @@
     =render('modals/new_need_not_validated')
   .footer-wrapper
     =render("layouts/footer")
+=render ('/modals/group_user_sign_up')
