--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -17,7 +17,10 @@
           =@group.name
         =simple_format(@group.description)
         -if !@group.has_member?(current_user)
-          =link_to("Join this group", join_group_path(@group), :class => 'btn btn-large btn-primary mt-2', :method => 'post')
+          -if @group_invitation && @group_invitation.user.nil?
+            =link_to("Join this group", new_group_registration_path(:return_to => join_group_path(@group)), :class => 'btn btn-large btn-primary mt-2')
+          -else
+            =link_to("Join this group", join_group_path(@group), :class => 'btn btn-large btn-primary mt-2')
       .span5
         =image_for(@group, '370x250#')
     -if @group.has_member?(current_user)
