Abilities for private groups and joining them

--- a/app/views/user_mailer/group_invitation.text.erb
+++ b/app/views/user_mailer/group_invitation.text.erb
@@ -2,7 +2,7 @@
 
 <%=@group_invitation.inviter.first_name%> has invited you to join the group '<%=@group_invitation.group%>' on <%=Settings.site_name%>.
 
-<%=group_invitation_url(@group_invitation)%>
+<%=group_invitation_url(@group_invitation, :ref => @group_invitation.ref)%>
 
 Thanks,
 
