--- a/app/views/group_registrations/new.html.haml
+++ b/app/views/group_registrations/new.html.haml
@@ -25,6 +25,8 @@
   .span10.offset1
     =semantic_form_for(@user, :url => group_registrations_path, :method => :post)  do |form|
       =hidden_field_tag :return_to, params[:return_to]
+      =form.hidden_field :group_invitation_id
+      =form.hidden_field :seen_group_invitation_email_warning
       .register-tab-content
         .register-tab-pane
           =form.inputs(:class => "form-horizontal") do
