Add postcode to group_registrations#new form

--- a/app/views/group_registrations/new.html.haml
+++ b/app/views/group_registrations/new.html.haml
@@ -45,6 +45,7 @@
                 %br
                 =link_to "Change your mind....", "#why-age", :'data-toggle' => "modal"
             =form.input :gender, :as => :radio, :collection => [["Male","male"], ["Female","female"]]
+            =form.input :postcode, :required => false, :input_html => {:class => "span2"}
             =form.input :email, :label => "Email address", :required => false, :help => "Enter the email address you would like to use for logging in again. We promise not share this with others.", :input_html => {:placeholder => "e.g. john@email.com"}
             =form.input :email_confirmation, :label => "Confirm email address", :required => false, :help => "Type your email address again so that we can check there are no typos", :input_html => {:placeholder => "e.g. john@email.com"}
             =form.input :password, :required => false, :help => "Choose a password that would you like to use to login"
