--- a/app/views/group_invitations/new.html.haml
+++ b/app/views/group_invitations/new.html.haml
@@ -1,8 +1,15 @@
+-content_for(:head) do
+  :coffeescript
+    $ ->
+      emails = #{User.select('email').collect(&:email)}
+      MultipleTypeahead.init('#group_invitation_emails', emails)
 .row
   .span8
     %h1.page-title=@group
     %p.lead Invite members to join this group.
+    %p
+      Enter email addresses separated by commas. Registered users will autocomplete but you can enter email addresses of neighbours that haven't registered to the site yet.
     =semantic_form_for(@group, :url => group_group_invitations_path(@group), :method => :post) do |form|
       =form.inputs do
-        =form.input :invitation_emails, :label => 'Enter email addresses separated by a comma'
+        =form.input :invitation_emails, :label => 'Enter email addresses', :input_html => {:autocomplete => 'off', :class => 'span8'}
         =form.commit_button 'Invite members', :button_html => {:class => 'btn btn-primary'}
