Only allow group owners to invite members to private group

--- a/app/views/group_invitations/new.html.haml
+++ b/app/views/group_invitations/new.html.haml
@@ -2,7 +2,7 @@
   :coffeescript
     $ ->
       emails = #{User.select('email').collect(&:email)}
-      MultipleTypeahead.init('#group_invitation_emails', emails)
+      MultipleTypeahead.init('#group_invitation_emails_s', emails)
 .row
   .span8
     %h1.page-title=@group
@@ -11,5 +11,5 @@
       Enter email addresses separated by commas. Registered users will autocomplete but you can enter email addresses of neighbours that haven't registered to the site yet.
     =semantic_form_for(@group, :url => group_group_invitations_path(@group), :method => :post) do |form|
       =form.inputs do
-        =form.input :invitation_emails, :label => 'Enter email addresses', :input_html => {:autocomplete => 'off', :class => 'span8'}
+        =form.input :invitation_emails_s, :label => 'Enter email addresses', :input_html => {:autocomplete => 'off', :class => 'span8'}
         =form.commit_button 'Invite members', :button_html => {:class => 'btn btn-primary'}
