--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -12,6 +12,6 @@
     =form.input :description, :label => 'Group bio', :required => false, :input_html => {:class => 'span6', :rows => 4}
     =form.input :image, :label => 'Photo', :as => :image
     .clearfix
-    =form.input :invitation_emails, :label => 'Invite members to this group?', :placeholder => 'Email addresses separated by a comma'
+    =form.input :invitation_emails_s, :label => 'Invite members to this group?', :placeholder => 'Email addresses separated by a comma'
   =form.buttons do
     =form.commit_button 'Save', :button_html => {:class => 'btn btn-primary btn-large'}
