--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -8,7 +8,7 @@
           %h4.groups-title
             Groups
             %small
-              View all groups
+              =link_to 'View all groups', all_groups_path
 -if @group
   .container
     .row.mb-2.mt-3
