--- a/app/views/users/_table.html.haml
+++ b/app/views/users/_table.html.haml
@@ -3,7 +3,7 @@
     -users.each do |user|
       -if current_user.admin? || user.try(:neighbourhood).try(:admin_id) == current_user.id
         %tr{:'data-toggle'=>"modal", :href=>"##{tab}-user-#{user.id}"}
-          %td=name_and_role(user)
+          %td=full_name_and_role(user)
           %td
             =user.address
           %td
@@ -12,7 +12,7 @@
           .modal-header
             %button.close{:type => 'button', :'data-dismiss' => 'modal'} x
             %h3
-              =name_and_role(user)
+              =full_name_and_role(user)
               =link_to('View bio',user,:class => 'btn btn-small')
           .modal-body
             %dl
