In Members tab, have owner as first in list with a 'Group owner' label

--- a/app/views/groups/members.html.haml
+++ b/app/views/groups/members.html.haml
@@ -10,7 +10,7 @@
   .row
     .span12
       %ul.group-members-list.help-list.unstyled
-        -@group.members.each do |user|
+        -@members.each do |user|
           %li.list
             .list-image
               =link_to(user, :class => 'pull-left') do
@@ -18,4 +18,6 @@
               %p.small-text=user
             .list-text
               %h3=link_to_self(user)
+              -if @group.owner == user
+                %span.label Group owner
               %p=user.city
